--- a/templates/index.html
+++ b/templates/index.html
@@ -29,6 +29,12 @@
 				<h4 class="calls-container hidden"><span class="calls"></span> and counting API calls!</h4>
 
 				<h3>Note: all data is cached for <strong>five minutes</strong> before updating</h3>
+
+				<p>
+					CORS is enabled, so you don't have to use a JSONP callback.
+
+					You may prefix all requests with <code>/minecraft/1.3</code> in case this API changes.
+				</p>
 			</div>
 		</div>
 
