--- a/templates/index.html
+++ b/templates/index.html
@@ -28,12 +28,18 @@
 
 				<h4 class="calls-container hidden"><span class="calls"></span> and counting API calls!</h4>
 
-				<h3>Note: all data is cached for <strong>five minutes</strong> before updating</h3>
+				<p>
+					Note: all data is cached for <strong>five minutes</strong> before updating
+				</p>
 
 				<p>
 					CORS is enabled, so you don't have to use a JSONP callback.
 
 					You may prefix all requests with <code>/minecraft/1.3</code> in case this API changes.
+				</p>
+
+				<p>
+					Not sure how to use it or don't want to mess with jQuery or XMLHttpRequest? Check out the <a href="/tutorial">tutorial</a>!
 				</p>
 			</div>
 		</div>
